// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/custom-field-input-date/custom-field-input-date className API sets the input class name 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        role="presentation"
      >
        <label
          class="label"
          for="field-date"
          id="field-date-label"
        >
          Field Date
        </label>
        <div
          class="control-container"
        >
          <input
            aria-describedby="field-dateHint"
            class="unique-input"
            id="field-date"
            name="field-name"
            type="text"
            value=""
          />
          <div
            class="icons"
          >
            <svg
              class="button"
              height="14"
              role="button"
              tabindex="0"
              width="11"
            >
              <title>
                Field Date calendar button
              </title>
              <use
                xlink:href="#calendar.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`src/components/custom-field-input-date/custom-field-input-date has defaults 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        role="presentation"
      >
        <label
          class="label"
          for="field-date"
          id="field-date-label"
        >
          Field Date
        </label>
        <div
          class="control-container"
        >
          <input
            aria-describedby="field-dateHint"
            class="input"
            id="field-date"
            name="field-name"
            type="text"
            value=""
          />
          <div
            class="icons"
          >
            <svg
              class="button"
              height="14"
              role="button"
              tabindex="0"
              width="11"
            >
              <title>
                Field Date calendar button
              </title>
              <use
                xlink:href="#calendar.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`src/components/custom-field-input-date/custom-field-input-date has defaults 2`] = `
Object {
  "dirty": false,
  "id": "field-date",
  "name": "field-name",
  "value": undefined,
}
`;
